@@ -51,7 +51,7 @@
        <widget class="QComboBox" name="attribute">
         <item>
          <property name="text">
-          <string>Name</string>
+          <string>Name or label</string>
          </property>
         </item>
         <item>
@@ -78,11 +78,6 @@
       </item>
       <item row="1" column="0">
        <widget class="QComboBox" name="findAttr">
-        <property name="font">
-         <font>
-          <pointsize>13</pointsize>
-         </font>
-        </property>
         <property name="editable">
          <bool>true</bool>
         </property>
