@@ -289,6 +289,16 @@
     </p>
   </li>
 
+  <li>
+    <p>
+      fixed #1760 'Search by attribute "name" should search by name or
+      label'. The first item in the list of attribute types available
+      for search now reads "Name or label". Searching using this
+      option matches the name or the label of object instead of just
+      the name. Label is only defined for Interface objects.
+    </p>
+  </li>
+
 </ul>
 
 
